--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -96,7 +96,7 @@
             android:text="Lastname Initial" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/lastNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -192,6 +192,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Register"
+        android:onClick="handleRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailId" />
